fixed logo alignment

--- a/web-app/src/index.css
+++ b/web-app/src/index.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Bree+Serif');
 @import url('https://fonts.googleapis.com/css?family=Ubuntu');
 
 
@@ -48,7 +47,6 @@ html, body, #root, #root>div{
   font: 24px 'Ubuntu', serif;
   display:inline-block;
   vertical-align:middle;
-  height:38px;
   padding:0 20px;
 }
 
